--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $(window).load(function() {
     <div class="container-fluid">
      
         <div class="navbar-header">
-         <a href="#"><img style="width:15%""class="navbar-brand" href="#" src="https://i.imgur.com/bZ4eCEm.jpg"></a>
+         <a href="#"><img style="width:50px;""class="navbar-brand" href="#" src="https://i.imgur.com/bZ4eCEm.jpg"></a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
