--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@ $(window).load(function() {
             <div class="blueberry">
                 <ul class="slides">
     
-          <li><img src="https://i.imgur.com/AQXWpEV.jpg"></li>
-                    <li><img src="https://i.imgur.com/IcK2UTI.jpg"></li>
-                    <li><img src="https://i.imgur.com/wcWqjUF.jpg"></li>
-                    <li><img src="https://i.imgur.com/1JY5QvN.jpg"></li>
+          <li><img style="width:400px;"  src="https://i.imgur.com/AQXWpEV.jpg"></li>
+                    <li><img style="width:400px;" src="https://i.imgur.com/IcK2UTI.jpg"></li>
+                    <li><img style="width:400px;" src="https://i.imgur.com/wcWqjUF.jpg"></li>
+                    <li><img style="width:400px;"  src="https://i.imgur.com/1JY5QvN.jpg"></li>
                 </ul>
             </div>
         </div>
