--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -209,7 +211,7 @@ $(window).load(function() {
     <div class="container-fluid">
      
         <div class="navbar-header">
-         <a href="#"><img style="width:50px;""class="navbar-brand" href="#" src="https://i.imgur.com/bZ4eCEm.jpg"></a>
+         <a href="#"><img style="width:15%""class="navbar-brand" href="#" src="https://i.imgur.com/bZ4eCEm.jpg"></a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -240,11 +242,10 @@ $(window).load(function() {
             <div class="blueberry">
                 <ul class="slides">
     
-          <li><img
-             src="https://i.imgur.com/AQXWpEV.jpg"></li>
-                    <li><img  src="https://i.imgur.com/IcK2UTI.jpg"></li>
-                    <li><img  src="https://i.imgur.com/wcWqjUF.jpg"></li>
-                    <li><img  src="https://i.imgur.com/1JY5QvN.jpg"></li>
+          <li><img src="https://i.imgur.com/AQXWpEV.jpg"></li>
+                    <li><img src="https://i.imgur.com/IcK2UTI.jpg"></li>
+                    <li><img src="https://i.imgur.com/wcWqjUF.jpg"></li>
+                    <li><img src="https://i.imgur.com/1JY5QvN.jpg"></li>
                 </ul>
             </div>
         </div>
@@ -254,5 +255,14 @@ $(window).load(function() {
 </div>
 
      </div>
+<footer>
+<a href="https://www.facebook.com" class="fa fa-facebook"></a>
+<a href="https://www.twitter.com" class="fa fa-twitter"></a>
+<a href="https://plus.google.com" class="fa fa-google"></a>
+<a href="https://www.instagram.com" class="fa fa-instagram"></a>
+<a href="https://www.pinterest.com" class="fa fa-pinterest"></a>
+</footer>
+
+
     </body>
 </html>
