--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title> Questionaire
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="Questionaire.css">
+<link rel="stylesheet" type="text/css" href="our-world.css">
 </head>
 <body>
 
@@ -126,7 +126,7 @@
 <div><p id = "correct">Correct: 0</p></div>
 <div><p id = "wrong">Wrong: 0</p></div>
 
-<script src = "Questionaire.js">
+<script src = "our-.js">
 </script>
 </body>
 </html>
