--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <div><p id = "correct">Correct: 0</p></div>
 <div><p id = "wrong">Wrong: 0</p></div>
 
-<script src = "our-w.js">
+<script src = "our-world.js">
 </script>
 </body>
 </html>
