--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
  <div href="#"id="contact"class="section">
             <h1><span>Contact Me</span></h1>
             
-       <div id="doc">
+       <div  id="doc">
         <div id="content">
-            <div class="blueberry">
+            <div style="display: block;" class="blueberry">
                 <ul class="slides">
     
           <li><img src="https://i.imgur.com/AQXWpEV.jpg"></li>
