--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <div style="display: block;" class="blueberry">
                 <ul class="slides">
     
-          <li><img src="https://i.imgur.com/AQXWpEV.jpg"></li>
-                    <li><img src="https://i.imgur.com/IcK2UTI.jpg"></li>
-                    <li><img src="https://i.imgur.com/wcWqjUF.jpg"></li>
-                    <li><img src="https://i.imgur.com/1JY5QvN.jpg"></li>
+          <li><img style= width:300px; , height:210px; src="https://i.imgur.com/AQXWpEV.jpg"></li>
+                    <li><img style= width:300px; , height:210px; src="https://i.imgur.com/IcK2UTI.jpg"></li>
+                    <li><img style= width:300px; , height:210px; src="https://i.imgur.com/wcWqjUF.jpg"></li>
+                    <li><img style= width:300px; , height:210px; src="https://i.imgur.com/1JY5QvN.jpg"></li>
                 </ul>
             </div>
         </div>
