--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div style="display: block;" class="blueberry">
                 <ul class="slides">
     
-          <li><img style= width:150px; , height:px; src="https://i.imgur.com/AQXWpEV.jpg"></li>
-                    <li><img style= width:150px; , height:150px; src="https://i.imgur.com/IcK2UTI.jpg"></li>
-                    <li><img style= width:150px; , height:150px; src="https://i.imgur.com/wcWqjUF.jpg"></li>
-                    <li><img style= width:150px; , height:150px; src="https://i.imgur.com/1JY5QvN.jpg"></li>
+          <li><img style= width:150px; , height:350px; src="https://i.imgur.com/AQXWpEV.jpg"></li>
+                    <li><img style= width:150px; , height:350px; src="https://i.imgur.com/IcK2UTI.jpg"></li>
+                    <li><img style= width:150px; , height:350px; src="https://i.imgur.com/wcWqjUF.jpg"></li>
+                    <li><img style= width:150px; , height:350px; src="https://i.imgur.com/1JY5QvN.jpg"></li>
                 </ul>
             </div>
         </div>
